# rbook

./: .dockerignore  .env  .gitignore  deny.toml  deployment.txt  docker-compose-full.yaml  docker-compose.yaml  getnotice.sh  license.txt  notice.txt
misc/: front.sh
postgres/entrypoint/: 001_init_db.sh  002_populate.sql
proto/: inventory.proto  system.proto
rpclient/: .license_report.md  Cargo.toml  build.rs
rpclient/src/: main.rs
rpcserv/: Cargo.toml  Dockerfile  build.rs
rpcserv/src/: main.rs  repo_system.rs  repository.rs  serv_inventory.rs  serv_system.rs
storage/pgadmin/: pgadmin4.db
storage/postgres/18/docker/: postmaster.pid
storage/postgres/18/docker/base/1/: 1247_fsm  1247_vm  1249  1255  1255_fsm  1255_vm  1259  13510_vm  13515  13515_fsm  13519  13520  13520_fsm  13520_vm  2601  2601_fsm  2602_vm  2605_fsm  2605_vm  2607_fsm  2607_vm  2609_fsm  2610_fsm  2617  2617_fsm  2617_vm  2618_fsm  2619  2619_fsm  2619_vm  2658  2659  2662  2675  2684  2685  2691  2692  2696  2836_fsm  (+18 more)
storage/postgres/18/docker/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13510  13510_fsm  13510_vm  13515  13515_fsm  13515_vm  13519  13520  13520_fsm  13520_vm  13524  13525  174  (+216 more)
storage/postgres/18/docker/global/: 1213  1213_fsm  1213_vm  1214  1232  1233  1260  1260_fsm  1260_vm  1261  1261_fsm  1261_vm  1262  1262_fsm  1262_vm  2396  2396_fsm  2396_vm  2397  2671  2672  2676  2677  pg_control  pg_internal.init
storage/postgres/18/docker/pg_xact/: 0000
yewapp/: Cargo.toml  Dockerfile
(+110 files in other folders)
